[gd_scene load_steps=8 format=2]

[ext_resource path="res://SongSelector.gd" type="Script" id=1]
[ext_resource path="res://SongLevelBlock.tscn" type="PackedScene" id=2]
[ext_resource path="res://TextBlockTrapezoid.tscn" type="PackedScene" id=3]
[ext_resource path="res://NextPageButton.gd" type="Script" id=4]
[ext_resource path="res://scenes/DifficultyButtons.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Button.tscn" type="PackedScene" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.0477028, 0.534034 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Heartrate" type="Spatial" parent="."]
transform = Transform( -8.40732e-08, 0, 1.92337, 0, 1.92337, 0, -1, 0, -4.37114e-08, -1.64334, -0.15069, 0.0439329 )

[node name="Button_140" parent="Heartrate" instance=ExtResource( 6 )]
transform = Transform( -3.49691e-08, 0, -0.8, 0, 0.8, 0, 0.8, 0, -3.49691e-08, 7.45058e-09, -0.12458, -0.206166 )
ontext = "HR 140"

[node name="Button_160" parent="Heartrate" instance=ExtResource( 6 )]
transform = Transform( -3.49691e-08, 0, -0.799999, 0, 0.799999, 0, 0.799999, 0, -3.49691e-08, 7.45058e-09, 0.143077, -0.206166 )
ontext = "HR 160"

[node name="Button_150" parent="Heartrate" instance=ExtResource( 6 )]
transform = Transform( -3.49691e-08, 0, -0.799999, 0, 0.799999, 0, 0.799999, 0, -3.49691e-08, 7.45058e-09, 0.0102901, -0.206166 )
ontext = "HR 150"

[node name="Button_170" parent="Heartrate" instance=ExtResource( 6 )]
transform = Transform( -3.49691e-08, 0, -0.8, 0, 0.8, 0, 0.8, 0, -3.49691e-08, 7.45058e-09, 0.271645, -0.206166 )
ontext = "HR 170"

[node name="SongBlocks" type="Spatial" parent="."]

[node name="Element2" parent="SongBlocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.676956, 0.416, 0 )
level_number = 1

[node name="Element4" parent="SongBlocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.677, -0.006, 0 )
level_number = 3

[node name="Element6" parent="SongBlocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.677, -0.438, 0 )
level_number = 5

[node name="Element1" parent="SongBlocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.657302, 0.415715, 0 )
level_number = 0

[node name="Element3" parent="SongBlocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.657302, -0.00565302, 0 )
level_number = 2

[node name="Element5" parent="SongBlocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.657302, -0.437727, 0 )
level_number = 4

[node name="NextPage" parent="." instance=ExtResource( 3 )]
transform = Transform( -0.25, -1.50996e-07, -1.65006e-15, 0, -4.37114e-08, 0.25, -3.7749e-08, 1, 1.09278e-08, 1.7626, 0, 0 )
defaultext = "[b][i]Next page[/i][/b]"

[node name="StaticBody" type="StaticBody" parent="NextPage"]
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="NextPage/StaticBody"]
transform = Transform( 1, 5.68434e-14, 0, 0, 1, 0, 0, 2.84217e-14, 1, 0, -0.0374871, -8.19306e-09 )
shape = SubResource( 1 )

[node name="DifficultyButtons" parent="." instance=ExtResource( 5 )]
transform = Transform( -8.40732e-08, 0, 1.92337, 0, 1.92337, 0, -1, 0, -4.37114e-08, -1.64334, -0.15069, 0.0439329 )
[connection signal="selected" from="Heartrate/Button_140" to="." method="_on_Heartrate_selected" binds= [ 140 ]]
[connection signal="selected" from="Heartrate/Button_160" to="." method="_on_Heartrate_selected" binds= [ 160 ]]
[connection signal="selected" from="Heartrate/Button_150" to="." method="_on_Heartrate_selected" binds= [ 150 ]]
[connection signal="selected" from="Heartrate/Button_170" to="." method="_on_Heartrate_selected" binds= [ 170 ]]
[connection signal="selected" from="SongBlocks/Element2" to="." method="_on_level_block_selected"]
[connection signal="selected" from="SongBlocks/Element4" to="." method="_on_level_block_selected"]
[connection signal="selected" from="SongBlocks/Element6" to="." method="_on_level_block_selected"]
[connection signal="selected" from="SongBlocks/Element1" to="." method="_on_level_block_selected"]
[connection signal="selected" from="SongBlocks/Element3" to="." method="_on_level_block_selected"]
[connection signal="selected" from="SongBlocks/Element5" to="." method="_on_level_block_selected"]
[connection signal="touched" from="NextPage/StaticBody" to="." method="_on_NextPage_touched"]
[connection signal="difficulty_selected" from="DifficultyButtons" to="." method="_on_DifficultyButtons_difficulty_selected"]
